# MagicOnLinux

./: .gitignore  BUGS.txt  CMakeLists.txt  HISTORY.txt  LICENSE  MACOS.txt  MANUAL.txt  README.md  install-all.sh  install-cartridge-mime-types.sh  install-image-mime-types.sh  install-mime-types.sh  install-program-mime-types.sh  install-rootfs.sh  main.c  main.cpp  uninstall.sh
assets/: atari-st-rom-cartridge.xml  atariprogram.xml  example-cartridge.stc  example-floppy720k.st  index.theme  magic-on-linux.desktop  st-disk-image.xml
inc/: Atari.h  AtariX.h  Clipboard.h  Debug.h  EmulationMain.h  EmulationRunner.h  Globals.h  HostHandles.h  HostXFS.h  MAC_XFS.H  MacXFS.h.disabled  MagiC.h  MagiCKernel.h  MagiCKeyboard.h  MagiCMouse.h  MagiCPrint.h  MagiCScreen.h  MagiCSerial.h  MagicMacXPluginTypes.h  MyPreferences.h  TextConversion.h  XCmd.h  XCmdDefs.h  audio.h  audio_click.h  audio_pling.h  config.h  conversion.h  emulation_globals.h  gui.h  macos_endian.h  mbr_vbr.h  mem_access_68k.h  missing.h  natfeat.h  network.h  nf_base.h  nf_basicset.h  nf_objs.h  osd_cpu.h  (+3 more)
kernel/: LOCALISE.SH
kernel/AES/: AESEVT.S  AESFRM.S  AESFSL.S  AESGRAF.S  AESINC.S  AESMAIN.S  AESMEN.S  AESOBJ.S  AESRSC.S  AESWIN.S  FARBIC.C  FARBICON.S
kernel/AES/FSEL/: FSEL.C  FSEL.H  KER_BIND.H  LISTBX_G.H
kernel/AES/FSEL/GER/: CR_FSRSC.BAT
kernel/AES/XMEN_MGR/: MTSMN.C
kernel/DOS/: DFS_FAT.S  STRUCTS.INC
kernel/HOSTBIOS/: ASSEMBLE.BAT  AUTO.S  DRIVE.S  HANDLKEY.S  HOSTBIOS.S  HOSTXFS.S  LINK.BAT  M.BAT  MACXBIOS.S  MAGICLIN.OS  PRIV_EXC.S  PROTOBT.S  PUNTAES.S  READ_KTB.S
kernel/HOSTBIOS/DE/: MAGICLIN.INP  MAGICLIN.OS
kernel/HOSTBIOS/EN/: MAGICLIN.INP  MAGICLIN.OS
kernel/HOSTBIOS/FR/: MAGICLIN.INP  MAGICLIN.OS
kernel/INC/: BIOS.INC  DEBUG.INC  DOS.INC  ERRNO.INC  KERNEL.INC  LOWMEM.INC  MACXKER.INC  VTSYS.INC
m68k/: m68kcpu.c  m68kcpu.h
po/: LINGUAS  MagicOnLinux.pot  Makefile  POTFILES  de.po  en_AU.po  en_CA.po  en_GB.po  en_NZ.po  fr.po  sk.po  sv.po  xml-extract.pl
rootfs/EXTRAS/APPLINE/: APPLINE.APP
rootfs/EXTRAS/MAGICCFG/: MAGICCFG.APP
rootfs/GEMSYS/: MFA2.SYS  MFA32K.SYS  MFA4.SYS  MFM16.SYS  MFM16M.SYS  MFM2.SYS  MFM256.SYS  MFM32K.SYS  OFF002.OSD  OFF004IP.OSD  OFF016IP.OSD  OFF16MOV.OSD  OFF256IP.OSD  OFF256PK.OSD  OFF32KFL.OSD  OFF32KPK.OSD  OFF65KPK.OSD
rootfs/GEMSYS/GEMDESK/: APPLICAT.APP  CHGRES.PRG  MAGXDESK.APP  MGCLOCK.PRG  MGCOPY.APP  MGEDIT.APP  MGFORMAT.PRG  MGNOTICE.APP  MGSEARCH.APP  MGVIEW.APP  MGXCLOCK.PRG  MOD_APP.TTP  SHOWFILE.TTP  VFATCONF.PRG  VT52.PRG  WBDAEMON.PRG
rootfs/GEMSYS/HOME/: COPS.INF
rootfs/GEMSYS/MAGIC/START/: MMXDAEMN.PRG
rootfs/GEMSYS/MAGIC/XTENSION/: DEV_SER.DEV  EDITOBJC.SLB  LOAD_IMG.SLB  RAMDISK.XFX  SPINMAGC.XFX  WINFRAME.SLB
rootfs/LANG/: LOCALISE.SH
rootfs/LANG/DE/: MAGICLIN.OS
rootfs/LANG/EN/: MAGICLIN.OS
rootfs/LANG/FR/: MAGICLIN.OS
src/: Clipboard.cpp  Debug.cpp  EmulationMain.cpp  EmulationRunner.cpp  Globals.cpp  HostHandles.cpp  HostXFS.cpp  MacXFS.cpp.disabled  MagiC.cpp  MagiCKeyboard.cpp  MagiCMouse.cpp  MagiCPrint.cpp  MagiCScreen.cpp  MagiCSerial.cpp  MyPreferences.cpp  TextConversion.cpp  XCmd.cpp  audio.cpp  conversion.cpp  ethernet_dummy.cpp  ethernet_linux.cpp  gui.cpp  mem_access_68k.cpp  missing.cpp  natfeat.cpp  network.cpp  nf_base.cpp  nf_basicset.cpp  nf_debugprintf.cpp  nf_objs.cpp  preferences.cpp  register_model.cpp  volume_images.cpp
src/gui/: .gitignore  Makefile  country.c  country.h  gen-pixbuf-csource.c  gtkrc.c  gxmessage.c  icons.qrc  magic-on-linux-settings.c  mxgtk-settings.c  mxnls.h  mxqt-settings.cc  nls-enable.h  nls.c  nls.h  nlsdump.c  nlstool.c  pofile.c  pofile.h  preferences.c  preferences.h  preferences.xml  xml-dump.pl
src/gui/libnls/: country.h  dcgettext.c  dcngettext.c  dgettext.c  dngettext.c  eval-plural-exp.c  eval-plural-str.c  eval-plural.h  expreval-exp.c  expreval-internal.h  expreval-node.c  expreval-print.c  expreval-silent.c  expreval-str.c  expreval.c  expreval.h  gettext.c  libnls.h  libnlsI.h  localename.c  localename.h  ngettext.c  plural-exp.c  plural-exp.h  plural.y  plurals.c  setlocale.c  textdomain.c
src/gui/libnls/old/: eval-plural-exp.c  eval-plural-str.c  (+5 more)
src/m68k/: m68kcpu.c  m68kcpu.h  m68kopac.c  m68kopdm.c  m68kopnz.c  m68kops.c  m68kops.h
(+27 files in other folders)
